<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConfiguracoesActivity">


    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:text="@string/selecione_o_n_mero_de_jogadores" />

    <RadioGroup
            android:id="@+id/opcaoRg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/jogador2Rb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:layout_marginHorizontal="5dp"
                android:text="@string/_2_jogadores" />
            <RadioButton
                android:id="@+id/jogador3Rb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:text="@string/_3_jogadores" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:text="@string/selecione_o_n_mero_de_rodadas" />

    <RadioGroup
        android:id="@+id/rodadasRg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rodadas1Rb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:layout_marginHorizontal="5dp"
            android:text="@string/_1_rodada" />
        <RadioButton
            android:id="@+id/rodadas3Rb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:text="@string/_3_rodadas" />

        <RadioButton
            android:id="@+id/rodadas5Rb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:text="@string/_5_rodadas" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/limparBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:onClick="onClickBtnCancelarConf"
            android:text="@string/cancelar" />

        <Button
            android:id="@+id/salvarBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:onClick="onClickBtnSalvarConf"
            android:text="@string/salvar" />
    </LinearLayout>



</LinearLayout>