<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/mostrarOpcoesSw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mostrar_op_es" />

    <LinearLayout
        android:id="@+id/selecionarLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selecione_o_n_mero_de_jogadores" />

        <RadioGroup
            android:id="@+id/opcaoRg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/jogador2Rb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:layout_marginHorizontal="5dp"
                android:text="@string/_2_jogadores" />
            <RadioButton
                android:id="@+id/jogador3Rb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                android:text="@string/_3_jogadores" />
        </RadioGroup>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/escolha_sua_jogada" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/pedraBt"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/pedra"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:text="0" />

        <ImageButton
            android:id="@+id/papelBt"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/papel"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:text="1" />

        <ImageButton
            android:id="@+id/tesouraBt"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/tesoura"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:text="2" />

    </LinearLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/jogada_escolhida" />

    <ImageView
        android:id="@+id/jogadaUsuarioIv"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="3dp"
        android:text="@string/jogada_do_computador_1" />

    <ImageView
        android:id="@+id/jogadaComputador1Iv"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>

    <LinearLayout
        android:id="@+id/mostrarJogador3Ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="3dp"
        android:text="@string/jogada_do_computador_2" />

    <ImageView
        android:id="@+id/jogadaComputador2Iv"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="3dp"
        android:text="@string/resultado" />

    <TextView
        android:id="@+id/resultadoTv"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="3dp"
        android:textSize="24sp"
        android:layout_height="wrap_content" />

</LinearLayout>